# gugu-agent

./: .env.example  .gitignore  .gitmodules  AGENTS.md  DeepseekV4优缺点.md  README.en.md  README.md  RTK.md  opencode  package-lock.json  package.json  restart-gugu-dev.cmd
.claude/skills/: ce-agent-native-architecture  ce-agent-native-audit  ce-brainstorm  ce-clean-gone-branches  ce-code-review  ce-commit  ce-commit-push-pr  ce-compound  ce-compound-refresh  ce-debug  ce-demo-reel  ce-dhh-rails-style  ce-doc-review  ce-plan  (+23 more)
adapters/: package.json
desktop/: .env.example  README.md  index.html  package.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  windows-installer-hooks.nsh
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: index.md
gateway/: .env.example  .gitignore  README.md  SCALING.md  package.json
release-notes/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
scripts/: generate-doc-architecture-diagrams.ps1  generate-release-json.ts  github-actions-env.example.ps1  publish-gitee-release.ts  release.ts  setup-tauri-updater-key.ps1  sync-fork.sh  trigger-github-desktop-release.ps1  upload-release-oss.ts
src/: QueryEngine.ts  commands.ts  localRecoveryCli.ts  query.ts
(+374 files in other folders)
